tdf#79542 xls: applyGroupBox to radiobutton groups

A group box control links radiobuttons together,
and so does a sheet.

No matching unit tests were found.

make CppunitTest_sc_subsequent_filters_test4 \
    CPPUNIT_TEST_NAME=testLegacyOptionButtonGroupBox

Change-Id: Ib5b03c68b5218649268f283d11981cc03fe4850a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137838
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>